# veil_hub

./: .gitignore  LICENSE  README.md  pyproject.toml
20201nov/: check_m2.py  check_m3.py  neuro_kernel.py
veil_hub/20201nov/: check_m1.py  check_m4.py  setti.py
